# linkml-project-cookiecutter

./: Dockerfile  Makefile  README.md  cookiecutter.json
extensions/: project_extensions.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .env.public  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  config.env  config.public.mk  config.yaml  contact.md  custom.env  duties.py  justfile  mkdocs.yml  project.Makefile  project.justfile  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: deploy-docs.yaml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
{{cookiecutter.project_name}}/examples/: README.md
{{cookiecutter.project_name}}/licenses/: BSD-3
{{cookiecutter.project_name}}/project/excel/: {{cookiecutter.__project_slug}}.xlsx
{{cookiecutter.project_name}}/project/graphql/: {{cookiecutter.__project_slug}}.graphql
{{cookiecutter.project_name}}/project/jsonld/: {{cookiecutter.__project_slug}}.context.jsonld  {{cookiecutter.__project_slug}}.jsonld
{{cookiecutter.project_name}}/project/jsonschema/: {{cookiecutter.__project_slug}}.schema.json
{{cookiecutter.project_name}}/project/owl/: {{cookiecutter.__project_slug}}.owl.ttl
{{cookiecutter.project_name}}/project/prefixmap/: {{cookiecutter.__project_slug}}.yaml
{{cookiecutter.project_name}}/project/protobuf/: {{cookiecutter.__project_slug}}.proto
{{cookiecutter.project_name}}/project/shacl/: {{cookiecutter.__project_slug}}.shacl.ttl
{{cookiecutter.project_name}}/project/shex/: {{cookiecutter.__project_slug}}.shex
{{cookiecutter.project_name}}/project/sqlschema/: {{cookiecutter.__project_slug}}.sql
{{cookiecutter.project_name}}/src/data/dh_vs_linkml_json/: {{cookiecutter.main_schema_class}}_dh.json
{{cookiecutter.project_name}}/src/data/examples/: Person-001.yaml  {{cookiecutter.main_schema_class}}-001.yaml
{{cookiecutter.project_name}}/src/data/examples/invalid/: {{cookiecutter.main_schema_class}}-001.yaml  {{cookiecutter.main_schema_class}}-no-id.yaml  {{cookiecutter.main_schema_class}}Collection-bad-id-pattern.yaml  {{cookiecutter.main_schema_class}}Collection-dupe-ids.yaml  {{cookiecutter.main_schema_class}}Collection-undefined-slot.yaml
{{cookiecutter.project_name}}/src/data/examples/valid/: {{cookiecutter.main_schema_class}}-001.yaml  {{cookiecutter.main_schema_class}}-minimal.yaml  {{cookiecutter.main_schema_class}}Collection-minimal-plus.yaml
{{cookiecutter.project_name}}/src/docs/: about.md
{{cookiecutter.project_name}}/src/docs/javascripts/: tablefilter.js
{{cookiecutter.project_name}}/src/docs/templates/: README.md
{{cookiecutter.project_name}}/src/local_schemasheets/templates/: slot_usage_esp_validation.tsv
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: _version.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/datamodel/: __init__.py  dh_json2linkml.py  generate_and_populate_template.py  linkml_json2dh.py  {{cookiecutter.__project_slug}}.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/schema/: {{cookiecutter.__project_slug}}.yaml
{{cookiecutter.project_name}}/tests/: __init__.py  test_data.py  test_valid_collections.py
(+1 files in other folders)
