[tool.poetry]
name = "{{cookiecutter.__project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.__author}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"
include = ["README.md", "src/{{cookiecutter.__project_slug}}/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
check-jsonschema = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
dh-json2linkml = 'src.{{cookiecutter.__project_slug}}.datamodel.dh_json2linkml:update_json'
linkml-json2dh = 'src.{{cookiecutter.__project_slug}}.datamodel.linkml_json2dh:extract_lists'
generate-and-populate-template = 'src.{{cookiecutter.__project_slug}}.datamodel.generate_and_populate_template:generate_and_populate_template'
