[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "{{cookiecutter.__project_slug}}"
description = "{{cookiecutter.project_description}}"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"},
]
license = "{{cookiecutter.license}}"
readme = "README.md"
include = ["README.md", "src/{{cookiecutter.__project_slug}}/schema", "project"]

requires-python = ">=3.9"

dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.8.0",
]

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.5.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = ">=1.3.5"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
schemasheets = ">=0.1.14"
jupyter = ">=1.0.0"
mknotebooks = ">= 0.8.0"
